--- a/src/stylesheets/height_weight_trait.scss
+++ b/src/stylesheets/height_weight_trait.scss
@@ -29,6 +29,7 @@
 }
 .weight.trait {
   input {
+    padding: 0;
     @include media($mobile) {
       font-size: 3em;
       @include span-columns(3.5)
